[gd_scene load_steps=3 format=3 uid="uid://bnt6qtlihui1r"]

[ext_resource type="Theme" uid="uid://chaavt4sj5lex" path="res://assets/themes/main_ui.tres" id="1_q2a67"]
[ext_resource type="Script" path="res://assets/prefab/document_card.gd" id="2_4ly4b"]

[node name="document_card" type="HBoxContainer"]
offset_right = 384.0
offset_bottom = 53.0
size_flags_horizontal = 3
theme = ExtResource("1_q2a67")
script = ExtResource("2_4ly4b")

[node name="OpenDocumentButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteDocumentButton" type="Button" parent="."]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="OpenDocumentButton" to="." method="_on_open_document_button_pressed"]
[connection signal="pressed" from="DeleteDocumentButton" to="." method="_on_delete_document_button_pressed"]
